@@ -14,12 +14,15 @@ require_once( "refreshLinks.inc" );
 require_once( "rebuildtextindex.inc" );
 require_once( "rebuildrecentchanges.inc" );
 
-$database = Database::newFromParams( $wgDBserver, $wgDBadminuser, $wgDBadminpassword, $wgDBname );
+$dbclass = 'Database' . ucfirst( $wgDBtype ) ;
+$database = new $dbclass( $wgDBserver, $wgDBadminuser, $wgDBadminpassword, $wgDBname );
 
-print "** Rebuilding fulltext search index (if you abort this will break searching; run this script again to fix):\n";
-dropTextIndex( $database );
-rebuildTextIndex( $database );
-createTextIndex( $database );
+if ($wgDBtype == 'mysql') {
+	print "** Rebuilding fulltext search index (if you abort this will break searching; run this script again to fix):\n";
+	dropTextIndex( $database );
+	rebuildTextIndex( $database );
+	createTextIndex( $database );
+}
 
 print "\n\n** Rebuilding recentchanges table:\n";
 rebuildRecentChangesTable();
