@@ -85,6 +85,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   for Internet Explorer's sake and standards compliance
 * (bug 13298) Tighter limits on Special:Newpages limits when embedding
 * Email subject in content language instead of sending user's UI language
+* (bug 13251) Allow maintenance rebuild scripts to work with Postgres
 
 === API changes in 1.13 ===
 
